--- a/src/main/dune
+++ b/src/main/dune
@@ -1,4 +1,4 @@
 (executable
 (name main)
-(libraries core yojson cfg bril)
+(libraries core yojson cfg types dce json_processor)
 (preprocess (pps ppx_let)))
