--- a/src/types/dune
+++ b/src/types/dune
@@ -1,4 +1,4 @@
 (library
 (name types)
 (libraries core)
-(preprocess (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq)))
+(preprocess (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq ppx_jane)))
