--- a/src/lvn/dune
+++ b/src/lvn/dune
@@ -1,4 +1,4 @@
 (library
 (name lvn)
 (libraries core types cfg)
-(preprocess (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_jane)))
+(preprocess (pps ppx_sexp_conv ppx_compare ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
