--- a/lvn.toml
+++ b/lvn.toml
@@ -4,12 +4,14 @@ benchmarks = './test/lvn/*.bril'
 [runs.baseline]
 pipeline = [
     "bril2json",
-    "brili -p {args}"
+    "brili -p"
 ]
 
 [runs.lvn]
 pipeline = [
     "bril2json",
     "./brilc lvn",
-    "brili -p {args}"
+    "bril2txt",
+    "bril2json",
+    "brili -p"
 ]
