--- a/dce.toml
+++ b/dce.toml
@@ -1,10 +1,10 @@
 extract = 'total_dyn_inst: (\d+)'
-benchmarks = './test/tdce/*.bril'
+benchmarks = '../bril/benchmarks/*.bril'
 
 [runs.baseline]
 pipeline = [
     "bril2json",
-    "brili -p"
+    "brili -p {args}"
 ]
 
 [runs.dce]
@@ -13,5 +13,5 @@ pipeline = [
     "./brilc dce",
     "bril2txt",
     "bril2json",
-    "brili -p"
+    "brili -p {args}"
 ]
